--- a/index.html
+++ b/index.html
@@ -7,20 +7,23 @@
     <link rel="stylesheet" href="style.css" />
   </head>
 
+
   <body>
     <!-- Navigation bar -->
     <nav class="flex space-between">
       <div>
-        <img src="./assets/kw-logo.png" alt="" />
+        <img src="/Users/dinakar/Desktop/kidz-world/kidz-world-html-boilerplate/assets/kw-logo.png" alt="Kidz World Logo" />
       </div>
       <div id="cart" class="flex">
-        <img src="./assets/cart-icon.png" alt="" />
+        <img src="/Users/dinakar/Desktop/kidz-world/kidz-world-html-boilerplate/assets/cart-icon.png" alt="Cart Icon" />
         <p>Cart items (<span id="cart-value">0</span>)</p>
       </div>
     </nav>
+
+
     <!-- Header section -->
     <header>
-      <div class="flex header-text">
+    <div id="header-background" class="flex header-text">
         <h1>Shop.</h1>
         <h1>Have Fun.</h1>
         <h1>Repeat.</h1>
@@ -28,13 +31,13 @@
       </div>
     </header>
     <!-- Books section -->
-    <div class="section-container flex">
-      <div class="section">
-        <h2>Discover New Books</h2>
-        <div class="container flex space-between">
-          <div>
-            <div>
-              <img class="books" src="./assets/book1.png" alt="" />
+
+    <!-- Books section -->
+<div class="section">
+    <h2>Discover New Books</h2>
+    <div class="books-container flex space-between">
+      <!-- Book 1 to Book 6 -->
+              <img class="books" src="/Users/dinakar/Desktop/kidz-world/kidz-world-html-boilerplate/assets/book1.png" alt="" />
               <h3>This was our pact</h3>
               <h4>Ryan Andrews</h4>
             </div>
@@ -42,7 +45,7 @@
               <p>$7.49</p>
               <div id="book1" class="button flex space-evenly">
                 <h6>Add</h6>
-                <img src="./assets/cart-icon-white.png" alt="" />
+                <img src="/Users/dinakar/Desktop/kidz-world/kidz-world-html-boilerplate/assets/cart-icon-white.png" alt="" />
               </div>
             </div>
           </div>
@@ -50,9 +53,7 @@
             <div>
               <img
                 class="books"
-                src="http://i1.faceprep.in/prograd-junior/book2.png"
-                alt=""
-              />
+                src="/Users/dinakar/Desktop/kidz-world/kidz-world-html-boilerplate/assets/book2.png" alt=""/>
               <h3>The famous five</h3>
               <h4>Guid Blyton</h4>
             </div>
@@ -60,13 +61,13 @@
               <p>$4.59</p>
               <div id="book2" class="button flex space-evenly">
                 <h6>Add</h6>
-                <img src="./assets/cart-icon-white.png" alt="" />
+                <img src="/Users/dinakar/Desktop/kidz-world/kidz-world-html-boilerplate/assets/cart-icon-white.png" alt="" />
               </div>
             </div>
           </div>
           <div>
             <div>
-              <img class="books" src="./assets/book3.png" alt="" />
+              <img class="books" src="/Users/dinakar/Desktop/kidz-world/kidz-world-html-boilerplate/assets/book3.png" alt="" />
               <h3>Matlida</h3>
               <h4>Roald Dahl</h4>
             </div>
@@ -74,7 +75,7 @@
               <p>$6.80</p>
               <div id="book3" class="button flex space-evenly">
                 <h6>Add</h6>
-                <img src="./assets/cart-icon-white.png" alt="" />
+                <img src="/Users/dinakar/Desktop/kidz-world/kidz-world-html-boilerplate/assets/cart-icon-white.png" alt="" />
               </div>
             </div>
           </div>
@@ -82,7 +83,7 @@
             <div>
               <img
                 class="books"
-                src="http://i1.faceprep.in/prograd-junior/book4.png"
+                src="/Users/dinakar/Desktop/kidz-world/kidz-world-html-boilerplate/assets/book4.png"
                 alt=""
               />
               <h3>Harry Potter</h3>
@@ -92,13 +93,13 @@
               <p>$10</p>
               <div id="book4" class="button flex space-evenly">
                 <h6>Add</h6>
-                <img src="./assets/cart-icon-white.png" alt="" />
+                <img src="/Users/dinakar/Desktop/kidz-world/kidz-world-html-boilerplate/assets/cart-icon-white.png" alt="" />
               </div>
             </div>
           </div>
           <div>
             <div>
-              <img class="books" src="./assets/book5.png" alt="" />
+              <img class="books" src="/Users/dinakar/Desktop/kidz-world/kidz-world-html-boilerplate/assets/book5.png" alt="" />
               <h3>For Young Readers</h3>
               <h4>Ruskin Bond</h4>
             </div>
@@ -106,13 +107,13 @@
               <p>$7.29</p>
               <div id="book5" class="button flex space-evenly">
                 <h6>Add</h6>
-                <img src="./assets/cart-icon-white.png" alt="" />
+                <img src="/Users/dinakar/Desktop/kidz-world/kidz-world-html-boilerplate/assets/cart-icon-white.png" alt="" />
               </div>
             </div>
           </div>
           <div>
             <div>
-              <img class="books" src="./assets/book6.png" alt="" />
+              <img class="books" src="/Users/dinakar/Desktop/kidz-world/kidz-world-html-boilerplate/assets/book6.png" alt="" />
               <h3>Wimpy Kid - DIY</h3>
               <h4>Jeff Kinney</h4>
             </div>
@@ -120,7 +121,7 @@
               <p>$4.99</p>
               <div id="book6" class="button flex space-evenly">
                 <h6>Add</h6>
-                <img src="./assets/cart-icon-white.png" alt="" />
+                <img src="/Users/dinakar/Desktop/kidz-world/kidz-world-html-boilerplate/assets/cart-icon-white.png" alt="" />
               </div>
             </div>
           </div>
@@ -128,12 +129,13 @@
       </div>
 
       <!-- game section -->
-      <div class="section">
-        <h2>Discover New Games</h2>
-        <div class="container flex space-between">
-          <div>
-            <div>
-              <img class="games" src="./assets/dart-board.png" alt="" />
+
+      <!-- Games section -->
+  <div class="section">
+    <h2>Discover New Games</h2>
+    <div class="games-container flex space-between">
+      <!-- Game 1 to Game 4 -->
+              <img class="games" src="/Users/dinakar/Desktop/kidz-world/kidz-world-html-boilerplate/assets/dart-board.png" alt="" />
               <h3>Dart Board</h3>
               <h4>Wooden board, 16 inches</h4>
             </div>
@@ -141,13 +143,13 @@
               <p>$17.49</p>
               <div id="game1" class="button flex space-evenly">
                 <h6>Add</h6>
-                <img src="./assets/cart-icon-white.png" alt="" />
+                <img src="/Users/dinakar/Desktop/kidz-world/kidz-world-html-boilerplate/assets/cart-icon-white.png" alt="" />
               </div>
             </div>
           </div>
           <div>
             <div>
-              <img class="games" src="./assets/connect-four.png" alt="" />
+              <img class="games" src="/Users/dinakar/Desktop/kidz-world/kidz-world-html-boilerplate/assets/connect-four.png" alt="" />
               <h3>Connect 4</h3>
               <h4>Board game, multiplayer</h4>
             </div>
@@ -155,13 +157,13 @@
               <p>$19.99</p>
               <div id="game2" class="button flex space-evenly">
                 <h6>Add</h6>
-                <img src="./assets/cart-icon-white.png" alt="" />
+                <img src="/Users/dinakar/Desktop/kidz-world/kidz-world-html-boilerplate/assets/cart-icon-white.png" alt="" />
               </div>
             </div>
           </div>
           <div>
             <div>
-              <img class="games" src="./assets/jenga.png" alt="" />
+              <img class="games" src="/Users/dinakar/Desktop/kidz-world/kidz-world-html-boilerplate/assets/jenga.png" alt="" />
               <h3>Jenga</h3>
               <h4>Wooden blocks, 54 pieces</h4>
             </div>
@@ -169,13 +171,13 @@
               <p>$20.99</p>
               <div id="game3" class="button flex space-evenly">
                 <h6>Add</h6>
-                <img src="./assets/cart-icon-white.png" alt="" />
+                <img src="/Users/dinakar/Desktop/kidz-world/kidz-world-html-boilerplate/assets/cart-icon-white.png" alt="" />
               </div>
             </div>
           </div>
           <div>
             <div>
-              <img class="games" src="./assets/monopoly.png" alt="" />
+              <img class="games" src="/Users/dinakar/Desktop/kidz-world/kidz-world-html-boilerplate/assets/monopoly.png" alt="" />
               <h3>Monopoly</h3>
               <h4>1.61 x 15.75 x 10.51 inches</h4>
             </div>
@@ -183,7 +185,7 @@
               <p>$19.49</p>
               <div id="game4" class="button flex space-evenly">
                 <h6>Add</h6>
-                <img src="./assets/cart-icon-white.png" alt="" />
+                <img src="/Users/dinakar/Desktop/kidz-world/kidz-world-html-boilerplate/assets/cart-icon-white.png" alt="" />
               </div>
             </div>
           </div>
@@ -196,7 +198,7 @@
         <div class="container flex space-between">
           <div>
             <div>
-              <img class="crafts" src="./assets/bookmarks.png" alt="" />
+              <img class="crafts" src="/Users/dinakar/Desktop/kidz-world/kidz-world-html-boilerplate/assets/bookmarks.png" alt="" />
               <h3>Bookmarks</h3>
               <h4>Handmade with love</h4>
             </div>
@@ -204,13 +206,13 @@
               <p>$12.49</p>
               <div id="craft1" class="button flex space-evenly">
                 <h6>Add</h6>
-                <img src="./assets/cart-icon-white.png" alt="" />
+                <img src="/Users/dinakar/Desktop/kidz-world/kidz-world-html-boilerplate/assets/cart-icon-white.png" alt="" />
               </div>
             </div>
           </div>
           <div>
             <div>
-              <img class="crafts" src="./assets/birthday-card.png" alt="" />
+              <img class="crafts" src="/Users/dinakar/Desktop/kidz-world/kidz-world-html-boilerplate/assets/birthday-card.png" alt="" />
               <h3>Birthday card</h3>
               <h4>Handmade with love</h4>
             </div>
@@ -218,13 +220,13 @@
               <p>$19.99</p>
               <div id="craft2" class="button flex space-evenly">
                 <h6>Add</h6>
-                <img src="./assets/cart-icon-white.png" alt="" />
+                <img src="/Users/dinakar/Desktop/kidz-world/kidz-world-html-boilerplate/assets/cart-icon-white.png" alt="" />
               </div>
             </div>
           </div>
           <div>
             <div>
-              <img class="crafts" src="./assets/stuffed-toy.png" alt="" />
+              <img class="crafts" src="/Users/dinakar/Desktop/kidz-world/kidz-world-html-boilerplate/assets/stuffed-toy.png" alt="" />
               <h3>Stuffed toys</h3>
               <h4>Handmade with love</h4>
             </div>
@@ -232,13 +234,13 @@
               <p>$15.99</p>
               <div id="craft3" class="button flex space-evenly">
                 <h6>Add</h6>
-                <img src="./assets/cart-icon-white.png" alt="" />
+                <img src="/Users/dinakar/Desktop/kidz-world/kidz-world-html-boilerplate/assets/cart-icon-white.png" alt="" />
               </div>
             </div>
           </div>
           <div>
             <div>
-              <img class="crafts" src="./assets/dream-catcher.png" alt="" />
+              <img class="crafts" src="/Users/dinakar/Desktop/kidz-world/kidz-world-html-boilerplate/assets/dream-catcher.png" alt="" />
               <h3>Dream catcher drawing</h3>
               <h4>Handmade with love</h4>
             </div>
@@ -246,7 +248,7 @@
               <p>$18.49</p>
               <div id="craft4" class="button flex space-evenly">
                 <h6>Add</h6>
-                <img src="./assets/cart-icon-white.png" alt="" />
+                <img src="/Users/dinakar/Desktop/kidz-world/kidz-world-html-boilerplate/assets/cart-icon-white.png" alt="" />
               </div>
             </div>
           </div>
@@ -258,7 +260,7 @@
     <footer class="flex space-between">
       <div>
         <h2>Brought to you by</h2>
-        <img src="./assets/krishti.png" alt="" />
+        <img src="/Users/dinakar/Desktop/kidz-world/kidz-world-html-boilerplate/assets/krishti.png" alt="" />
       </div>
       <div class="flex" id="details">
         <h3>Krishti</h3>
